feat: enable real campaign launch
